[gd_scene load_steps=65 format=3 uid="uid://bo22hma5o31ig"]

[ext_resource type="Script" path="res://Scenes/SplashScreen/demo_splash_screen_wizard/MainMenu.gd" id="1_3uoqj"]
[ext_resource type="Script" path="res://Scenes/SplashScreen/addons/splash_screen_wizard/splash_screen.gd" id="1_myy6d"]
[ext_resource type="PackedScene" uid="uid://dei3j88yw6omf" path="res://Scenes/Levels/MainFloor.tscn" id="2_annn5"]
[ext_resource type="PackedScene" uid="uid://ckqiyl367tw67" path="res://Scenes/SplashScreen/demo_splash_screen_wizard/slides/slide_disclaimer.tscn" id="2_flgjm"]
[ext_resource type="AudioStream" uid="uid://l4ps16jwyewh" path="res://Art/Audio/Music/TetrisTitle.mp3" id="3_7ikyq"]
[ext_resource type="PackedScene" uid="uid://cxqpgg8ax8bqv" path="res://Scenes/SplashScreen/demo_splash_screen_wizard/slides/slide_godot.tscn" id="3_phgod"]
[ext_resource type="Texture2D" uid="uid://bbesu3dytgmpi" path="res://Art/Sprites/MainMenu.png" id="4_fpgwe"]
[ext_resource type="Script" path="res://Scenes/SplashScreen/demo_splash_screen_wizard/slides/slide_godot.gd" id="4_g0sum"]
[ext_resource type="PackedScene" uid="uid://b4n6q82xkiwtn" path="res://Scenes/SplashScreen/demo_splash_screen_wizard/slide_cachorro_gigante.tscn" id="5_l1t5b"]
[ext_resource type="Script" path="res://Scenes/SplashScreen/addons/splash_screen_wizard/transitions/slide_transition_fade.gd" id="5_pu8ia"]

[sub_resource type="LabelSettings" id="LabelSettings_8xhda"]
font_size = 56

[sub_resource type="AtlasTexture" id="AtlasTexture_p14es"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 0, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_oalo3"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 0, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_74jq2"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 0, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvo5k"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 0, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab8f8"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 540, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1q3o"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 540, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhsk0"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 540, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qdrr"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 540, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ouc3"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 1080, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0mdt"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 1080, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sj00"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 1080, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_si7ui"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 1080, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_njxgr"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 1620, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_whv3c"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 1620, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj0cd"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 1620, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t0gj"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 1620, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnbit"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 2160, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8x48"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 2160, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ge76"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 2160, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2p63"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 2160, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq03e"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 2700, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbk7d"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 2700, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_cip1m"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 2700, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmunv"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 2700, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo5lo"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 3240, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke1uo"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 3240, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbs63"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 3240, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_sksam"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 3240, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_o42ek"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 3780, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvq8"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 3780, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_54o58"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 3780, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2ae1"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 3780, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbeax"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 4320, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkimf"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 4320, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8cgr"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 4320, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpr6j"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 4320, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5une"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 4860, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_cedgp"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 4860, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt1mx"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 4860, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfrjt"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 4860, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_i52a7"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 5400, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_v24ub"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 5400, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a3di"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 5400, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7r43"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 5400, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c5bq"]
atlas = ExtResource("4_fpgwe")
region = Rect2(0, 5940, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvnkw"]
atlas = ExtResource("4_fpgwe")
region = Rect2(540, 5940, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt7u4"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1080, 5940, 540, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_heaq7"]
atlas = ExtResource("4_fpgwe")
region = Rect2(1620, 5940, 540, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_dm60y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p14es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oalo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74jq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvo5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab8f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1q3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhsk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qdrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ouc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0mdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sj00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si7ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njxgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whv3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj0cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t0gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnbit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8x48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ge76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2p63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq03e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbk7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cip1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmunv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo5lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke1uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbs63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sksam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o42ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdvq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54o58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2ae1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbeax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkimf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8cgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpr6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5une")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cedgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt1mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfrjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i52a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v24ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a3di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7r43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c5bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvnkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt7u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heaq7")
}],
"loop": true,
"name": &"default",
"speed": 36.0
}]

[sub_resource type="Resource" id="Resource_skv6c"]
script = ExtResource("5_pu8ia")
fade_type = 0
duration = 0.75
transition_type = 0

[sub_resource type="Resource" id="Resource_js15x"]
script = ExtResource("5_pu8ia")
fade_type = 1
duration = 0.5
transition_type = 0

[sub_resource type="Resource" id="Resource_fgivj"]
script = ExtResource("5_pu8ia")
fade_type = 0
duration = 0.75
transition_type = 0

[sub_resource type="Resource" id="Resource_40phl"]
script = ExtResource("5_pu8ia")
fade_type = 1
duration = 0.5
transition_type = 5

[node name="DemoSplashScreenWizard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 49.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3uoqj")
first_scene = ExtResource("2_annn5")

[node name="MusicTitleScreen" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource("3_7ikyq")
volume_db = -20.0

[node name="CenterContainer" type="BoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_right = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
text = "Parry Pong"
label_settings = SubResource("LabelSettings_8xhda")
horizontal_alignment = 1
autowrap_mode = 2

[node name="NewGame" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Novo jogo"

[node name="LoadGame" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Carregar jogo"

[node name="Quit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Morrer de imediato"

[node name="Skeleton" type="AnimatedSprite2D" parent="MainMenu/CenterContainer/VBoxContainer"]
position = Vector2(497, 330)
sprite_frames = SubResource("SpriteFrames_dm60y")
frame_progress = 0.631363

[node name="SplashScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myy6d")
delay_between_slides = 0.5
skip_input_action = &"ui_accept"

[node name="Background" type="ColorRect" parent="SplashScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SlideDisclaimer" parent="SplashScreen" instance=ExtResource("2_flgjm")]
layout_mode = 1
duration = 2.0
skippable = true

[node name="SlideGodot" parent="SplashScreen" instance=ExtResource("3_phgod")]
layout_mode = 1
script = ExtResource("4_g0sum")
transition_in = SubResource("Resource_skv6c")
transition_out = SubResource("Resource_js15x")
duration = 1.75
skippable = true

[node name="SlideCachorroGigante" parent="SplashScreen" instance=ExtResource("5_l1t5b")]
layout_mode = 1
transition_in = SubResource("Resource_fgivj")
transition_out = SubResource("Resource_40phl")
duration = 1.75
skippable = true

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/NewGame" to="MainMenu" method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/LoadGame" to="MainMenu" method="_on_load_game_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Quit" to="MainMenu" method="_on_quit_pressed"]
[connection signal="finished" from="SplashScreen" to="MainMenu" method="_on_splash_screen_finished"]
